pkg/lang/testdata/ub/constraints/valid/predicate-for-each.ub
constraints: [
  {
    kind:      predicate
    @for-each: var.replicas
    when:      true
    require:   @each.value.tls == true
  },
]
