pkg/lang/testdata/ub/constraints/invalid/for-each-duplicate-binding.ub
constraints: [
  {
    kind: predicate
    @for-each: [ { @a: var.rules }, { @a: var.rules }, ]
    when:    true
    require: true
  },
]
